--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="copyright">
                     &copy; Copyright <strong>2021-2022</strong>. All Rights Reserved
                   </div>
-                  <div class="credits">Designed by <strong><a href="https://shahdevarsh.me/">Devarsh Shah</a></strong>
+                  <div class="credits">Designed by <strong><a href="https://devarsh1029.github.io/">Devarsh Shah</a></strong>
             
                   </div>
                   
